# rt2_assignment

./: CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  conf.py  index.rst  launch_all.sh  my_mapping_rules.yaml  package.xml  pioneerROS_rt2.ttt  rt2_assignment2.ipynb  rt2_mapping.yaml  run_jupyter.js  vrep.txt
.ipynb_checkpoints/: rt2_assignment2-checkpoint.ipynb  rt2_jupyter-checkpoint.ipynb
CoppeliaSim_Edu_V4_2_0_Ubuntu20_04/: b0_bubbleRob  bubbleRobClient_b0RemoteApi  bubbleRobClient_remoteApi  coppeliaSim  standAloneKinematicsDemo1  standAloneKinematicsDemo2
CoppeliaSim_Edu_V4_2_0_Ubuntu20_04/lua/: simROS-typecheck.lua
_build/doctrees/: environment.pickle  index.doctree
_build/html/: .buildinfo  dir_53e6fa9553ac22a5646d2a2b2d7b97a1.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  genindex.html  globals_func.html  go__to__point_8py.html  menudata.js  namespaceconf.html  namespacego__to__point.html  namespacemembers.html  namespaces.html  namespaceuser__interface.html  py-modindex.html  searchindex.js  state__machine_8cpp.html  state__machine_8cpp__incl.md5
_build/latex/: conf_8py.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  go__to__point_8py.tex  namespaceconf.tex  namespacego__to__point.tex  namespaces.tex  namespaceuser__interface.tex  position__service_8cpp.tex  refman.tex  state__machine_8cpp.tex  state__machine_8cpp__incl.md5  user__interface_8py.tex
_build/xml/: _c_make_lists_8txt.xml  _r_e_a_d_m_e_8md.xml  conf_8py.xml  go__to__point_8py.xml  index.xml  md__r_e_a_d_m_e.xml  namespaceconf.xml  namespacego__to__point.xml  namespaceuser__interface.xml  position__service_8cpp.xml  state__machine_8cpp.xml  user__interface_8py.xml
action/: Motion.action
doc/: Doxyfile
doc/html/: _c_make_lists_8txt.html  _r_e_a_d_m_e_8md.html  dir_53e6fa9553ac22a5646d2a2b2d7b97a1.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  globals_vars.html  go__to__point_8py.html  graph_legend.html  index.html  md__r_e_a_d_m_e.html  namespacego__to__point.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html  namespaceuser__interface.html  pages.html  position__service_8cpp.html  position__service_8cpp__incl.map  position__service_8cpp__incl.md5  state__machine_8cpp.html  state__machine_8cpp__incl.map  state__machine_8cpp__incl.md5  user__interface_8py.html
doc/html/search/: all_0.js  (+29 more)
doc/latex/: dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  go__to__point_8py.tex  md__r_e_a_d_m_e.tex  namespacego__to__point.tex  namespaces.tex  namespaceuser__interface.tex  position__service_8cpp.tex  position__service_8cpp__incl.md5  refman.tex  state__machine_8cpp.tex  state__machine_8cpp__incl.md5  user__interface_8py.tex
docs/: _c_make_lists_8txt.html  _r_e_a_d_m_e_8md.html  conf_8py.html  globals.html  globals_vars.html  graph_legend.html  index.html  md__r_e_a_d_m_e.html  namespacemembers_func.html  namespacemembers_vars.html  objects.inv  pages.html  position__service_8cpp.html  position__service_8cpp__incl.map  search.html  user__interface_8py.html
docs/html/: _c_make_lists_8txt.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  graph_legend.html  md__r_e_a_d_m_e.html  namespacemembers.html  pages.html  position__service_8cpp.html
docs/latex/: dir_53e6fa9553ac22a5646d2a2b2d7b97a1.tex  namespacego__to__point.tex
docs/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_4.js  all_6.js  all_7.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  files_2.js  files_4.js  functions_1.js  functions_3.js  functions_4.js  functions_7.js  functions_8.js  namespaces_0.js  namespaces_1.js  pages_0.js  searchdata.js  variables_10.js  variables_2.js  variables_3.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  variables_b.js  variables_c.js  variables_e.js  variables_f.js
jupyter/: robot_control.ipynb  rt2_jupyter.ipynb  visualization.ipynb
jupyter/.ipynb_checkpoints/: robot_control-checkpoint.ipynb  (+2 more)
launch/: sim_comp_launch.py  sim_python.launch  sim_vrep.launch
picture/: result_of_ros2-2021-07-29_17.11.49.mkv  result_of_ros2-2021-07-29_17.13.46.mkv
scripts/: go_to_point.py  user_interface.py
source/: conf.py  index.rst
src/: position_service.cpp  state_machine.cpp
vrep/: pioneerROS_rt2.ttt
(+44 files in other folders)
